--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,18 +10,18 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760402.md#1">陆言：医生被杀案是中共治下恶果的冰山一角</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md#1">中共惧怕《反渗透法》偷换焦点渲染恐怖</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md#1">程晓容：惧怕《反渗透法》中共偷换焦点渲染恐怖</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760290.md#1">袁斌：香港花季少女之死告诉你中共有多邪</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749214.md#1">李旭彤：挖掘五千年文明惊世宝藏（12）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760118.md#1">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759935.md#1">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759583.md#1">【名家专栏】美国真正的“自由红利”是什么</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750552.md#1">美国抗共人物系列：亚太助理国务卿史达伟</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758833.md#1">金言：2019年末 武汉再现惊魂噩梦</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758681.md#1">周晓辉：习发贺词 2020说新年快乐有些沉重</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758706.md#1">张林：共军在朝鲜战争中丧生两百万（1）</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
