--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -36,10 +36,10 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760885.md#1">武汉肺炎疫情 8人发帖遭传唤 引发网络不满</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760857.md#1">举债支撑 中共央行降准放水8000亿</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728046.md#1">《美国思想领袖》专访邵岚：港警接令刺激抗议者</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728046.md#1">【思想领袖】专访邵岚：港警接令刺激抗议者</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750457.md#1">【新闻看点】新年祝福 全球网友寄语香港</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760571.md#1">学者：反渗透法照妖镜 大师链撤离台湾</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760743.md#1">元旦逾百万港人游行 港警疑制造事端叫停</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760743.md#1">惧人数破200万纪录 港警腰斩游行毁承诺</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>
