--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -54,7 +54,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760571.md#1">学者：反渗透法照妖镜 大师链撤离台湾</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759086.md#1">【十字路口】反渗透法过关 3疑点曝中共心慌</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757710.md#1">谢师恩 大陆法轮功学员祝李大师新年好</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757710.md#1">大陆30省法轮功学员祝李大师新年好</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760383.md#1">林郑 港警 何君尧入选“年度可耻人物”三甲</a><br>
