--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -27,7 +27,10 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11745896.md#1" target="_blank">夏小强：孙小果再获死刑 背后靠山是谁？</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11745896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>查看孙小果的恶行，可以称得上恶贯满盈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:02 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746747.md#1" target="_blank">王行： “世界律师大会”让中共臭名远扬</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-600x400-1-150x120.jpg" align ="left"></a>前些日子，中共在广州举办的“世界律师大会”已经闭幕，表面上中共很霸道，剥夺了国际律师联盟总裁罗思（Jerome Roth）在大会上的发言权，但是从另一面看又是个好事，它让原本不太了解中共的各国律师都亲眼见视了中共的厉害。所以说无论中共在大会上如何刻意想让律师听到什么，都不会比它做的这件事更有说服力，不是有句话叫做“事实.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746408.md#1" target="_blank">王友群：中共疯狂打压 香港艰难中傲然挺立</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-1-150x120.jpg" align ="left"></a>019年，水一般柔弱的香港人，反抗中共暴政所表现出的智慧和勇气，震惊了世界，也感动了世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745538.md#1" target="_blank">杨宁：炮制圣诞节起源谎言 中共用心险恶</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745538.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1412202006202483-600x400-150x120.jpg" align ="left"></a>中共莫要忘记的是，颠倒黑白可以暂时成功，但却逃不过事实的审判，真相终会还原，而在“天灭中共”的声音中，中共以及所有的追随者正在为所做的一切付出代价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:25 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751007.md#1" target="_blank">云鹤天：观台湾大选</a><br></h3>一国两制门
+弄巧成拙蠢
+坑了韩国瑜
+助力蔡英文......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748931.md#1" target="_blank">陆客：在大陆政治学习学出三个更正</a><br></h3>阅前提示：本文是写给一些中国大陆的党员朋友，他们正被中共洗脑的大量政治学习煎熬，交流下保护灵魂的学习思路。因文字采用他们熟悉的腔调，变异的党文化气息较重，正常人看了可能会有不适，特提醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749203.md#1" target="_blank">陆客：末世民风（四）</a><br></h3>一、 香港妖影
 
