--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,7 +9,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761548.md#1">可心：侵蚀联合国人权事务 中共威胁普世价值</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761548.md#1">可心：中共侵蚀联合国人权事务的四大手段</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761615.md#1">夏林：以天灭中共为主线的2019年大事</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761178.md#1">海风：新年新定义</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761132.md#1">颜丹：中国“暴力伤医”为何异于全球</a><br>
